# RagLab

./: .gitignore  LICENSE  README.md  README_agent.md  README_en.md  README_zh.md  pyproject.toml  run_simple.py  test_conflict.py  test_import.py  test_table.py
docs/: 01-requirements.md  02-design.md  03-plan-01-setup-core.md  03-plan-02-storage-cli.md  03-plan-03-ui.md  03-plan-04-integration.md
docs/superpowers/plans/: 2026-05-06-ui-redesign.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: AnimatedBg.vue  EChart.vue
frontend/src/i18n/: en.js  zh.js
frontend/src/pages/: DatasetsPage.vue  PlaygroundPage.vue  SettingsPage.vue
frontend/src/utils/: api.js  i18n.js
src/raglab/: __init__.py  __main__.py  api.py  cli.py  logging_config.py
src/raglab/core/: __init__.py  embedder.py  metrics.py  scorer.py  splitter.py
src/raglab/i18n/: __init__.py  en.json  zh.json
src/raglab/storage/: db.py
src/raglab/ui/: app.py
src/raglab/ui/components/: __init__.py  heatmap.py  leaderboard.py
src/raglab/ui/pages/: __init__.py  chunk_lab.py  datasets.py  evaluate.py  playground.py  settings.py
tests/: test_cli.py  test_db.py  test_db_delete.py  test_embedder.py  test_end_to_end.py  test_heatmap.py  test_i18n.py  test_local_flow.py  test_metrics.py  test_scorer.py  test_splitter.py
