[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raglab"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" }
]
description = "Embedding model evaluation and selection tool"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "litellm>=1.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "scikit-learn>=1.3"
]

[project.scripts]
raglab = "raglab.cli:app"

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
